suck-shop-apps/carts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: carts
  name: carts
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: carts
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: carts
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
          image: weaveworksdemos/carts:0.4.8
          name: carts
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
          volumeMounts:
            - mountPath: /tmp
              name: carts-tmpfs0
      hostname: carts
      restartPolicy: Always
      volumes:
        - emptyDir:
            medium: Memory
          name: carts-tmpfs0
status: {}
