suck-shop-apps/catalogue-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: catalogue-db
  name: catalogue-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: catalogue-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: catalogue-db
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "true"
            - name: MYSQL_DATABASE
              value: socksdb
            - name: MYSQL_ROOT_PASSWORD
              value: ${MYSQL_ROOT_PASSWORD}
          image: weaveworksdemos/catalogue-db:0.3.0
          name: catalogue-db
          resources: {}
      hostname: catalogue-db
      restartPolicy: Always
status: {}
