suck-shop-apps/catalogue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: catalogue
  name: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: catalogue
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: catalogue
    spec:
      containers:
        - image: weaveworksdemos/catalogue:0.3.5
          name: catalogue
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
      hostname: catalogue
      restartPolicy: Always
status: {}
