suck-shop-apps/edge-router-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: edge-router
  name: edge-router
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: edge-router
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: edge-router
    spec:
      containers:
        - image: weaveworksdemos/edge-router:0.1.1
          name: edge-router
          ports:
            - containerPort: 80
            - containerPort: 8080
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
                - CHOWN
                - SETGID
                - SETUID
                - DAC_OVERRIDE
              drop:
                - all
          volumeMounts:
            - mountPath: /var/run
              name: edge-router-tmpfs0
      hostname: edge-router
      restartPolicy: Always
      volumes:
        - emptyDir:
            medium: Memory
          name: edge-router-tmpfs0
status: {}
