suck-shop-apps/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front-end
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: front-end
    spec:
      containers:
        - image: weaveworksdemos/front-end:0.3.12
          name: front-end
          resources: {}
          securityContext:
            capabilities:
              drop:
                - all
      hostname: front-end
      restartPolicy: Always
status: {}
