suck-shop-apps/orders-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: orders-db
  name: orders-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orders-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: orders-db
    spec:
      containers:
        - image: mongo:3.4
          name: orders-db
          resources: {}
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - all
          volumeMounts:
            - mountPath: /tmp
              name: orders-db-tmpfs0
      hostname: orders-db
      restartPolicy: Always
      volumes:
        - emptyDir:
            medium: Memory
          name: orders-db-tmpfs0
status: {}
