suck-shop-apps/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: payment
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: payment
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: payment
    spec:
      containers:
        - image: weaveworksdemos/payment:0.4.3
          name: payment
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
      hostname: payment
      restartPolicy: Always
status: {}
