suck-shop-apps/queue-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: queue-master
  name: queue-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: queue-master
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: queue-master
    spec:
      containers:
        - image: weaveworksdemos/queue-master:0.3.1
          name: queue-master
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
          volumeMounts:
            - mountPath: /var/run/docker.sock
              name: queue-master-claim0
            - mountPath: /tmp
              name: queue-master-tmpfs0
      hostname: queue-master
      restartPolicy: Always
      volumes:
        - name: queue-master-claim0
          persistentVolumeClaim:
            claimName: queue-master-claim0
        - emptyDir:
            medium: Memory
          name: queue-master-tmpfs0
status: {}
