suck-shop-apps/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.6.8
          name: rabbitmq
          resources: {}
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
                - DAC_OVERRIDE
              drop:
                - all
      hostname: rabbitmq
      restartPolicy: Always
status: {}
