suck-shop-apps/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: user-db
    spec:
      containers:
        - image: weaveworksdemos/user-db:0.4.0
          name: user-db
          resources: {}
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - all
          volumeMounts:
            - mountPath: /tmp
              name: user-db-tmpfs0
      hostname: user-db
      restartPolicy: Always
      volumes:
        - emptyDir:
            medium: Memory
          name: user-db-tmpfs0
status: {}
