suck-shop-apps/user-sim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: user-sim
  name: user-sim
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-sim
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ss.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sock-default: "true"
        io.kompose.service: user-sim
    spec:
      containers:
        - args:
            - -d
            - "60"
            - -r
            - "200"
            - -c
            - "2"
            - -h
            - edge-router
          image: weaveworksdemos/load-test:0.1.1
          name: user-sim
          resources: {}
          securityContext:
            capabilities:
              drop:
                - all
      hostname: user-simulator
      restartPolicy: Always
status: {}
