suck-shop-apps/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ss.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 80
      targetPort: 8079
  selector:
    io.kompose.service: front-end
