suck-shop-apps/sock-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sock-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sock-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sock-default: "true"
